2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (BridgeConnection.__terminate_client_connection):
	Document why this is only necessary for the client-bridge connection.

2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (koji_read_config): Require 'topurl' instead of 'pkgurl'.
	* src/bridge.py (KojiClient.__init__): New member self.__koji_pathinfo.
	(KojiClient.__get_session): Initialize self.__koji_pathinfo from
	topurl in Koji configuration.
	(KojiClient.get_rpm_url): Use self.__koji_pathinfo.build instead of
	hard-coding the build directory layout, like Koji 1.7 does.

2012-07-10  Miloslav Trmač  <mitr@redhat.com>

	* src/client.py (SignRPMArgumentExaminer.open_rpm): Refuse to work on
	zero-length files (the bridge would try to replace them with something
	looked up in Koji).
	* tests/basic.at (Basic functionality): Test handling of empty files
	in sign-rpm and sign-rpms.

	* src/double_tls.py (_SplittingBuffer._active): Mark as inactive after
	we've seen EOFs on both streams, don't wait for a TLS close notify and
	FIN.

	* src/double_tls.py (_debug): Update sample to store output in per-PID
	files, and disable buffering.

	* src/double_tls.py (_CombiningBuffer._handle_errors): Don't send
	EOF markers if the destination has been already shut down for other
	reasons.

	* src/double_tls.py (_SplittingBuffer._handle_errors): Fix class name
	in debug log.

2012-06-25  Miloslav Trmač  <mitr@redhat.com>

	* tests/basic.at (Basic functionality): Replace GnuPG version by a
	constant string before comparing the public key.
	* tests/imported-public-key.asc: Replace GnuPG version by a constant
	string.

	* Makefile.am (installcheck-local): Make sure the test suite is
	up-to-date before running it.

2012-06-03  Miloslav Trmač  <mitr@redhat.com>

	* Makefile.am (pythondir): Override Python installation location.
	(python_PYTHON, nodist_python_PYTHON): Rename from pkgdata_PYTHON
	and nodist_pkgdata_PYTHON to work around automake's placement