@@ -29,6 +29,14 @@
 # koji-config-ppc64: ~/.koji-ppc64.conf
 # koji-config-s390: ~/.koji-s390.conf
 
+# Fedora account system group required for access to the Koji instance.  If not
+# defined or empty, no additional Fedora account check is done.
+# "[bridge]/required-fas-group" above is required for all instances.  There is
+# no way to require a specific group only for the default instance.
+# Example:
+# required-fas-group-ppc64: ppc64-signers
+# required-fas-group-s390: s390-signers
+
 [daemon]
 # The user to run as
 unix-user: sigul
